objects/Sample_Product__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Product_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Unit_of_Measure__c</fullName>
        <label>Quantity Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipName>Product_Samples</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sample Product</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Sample Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Product</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
        <errorMessage>Must include product</errorMessage>
    </validationRules>
</CustomObject>